feat: add first section banner

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,18 @@
     @@include('html/partials/header.html')
 
     <!-- main -->
-    <main></main>
+    <main>
+        <section class="section section--banner">
+            <div class="container">
+                <div class="section__inner">
+                    <div class="banner">
+                        <p class="banner__text">Watch your <span>favorite</span> animal online</p>
+                        <button type="button" class="btn btn--fill">Watch online</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <!-- footer include -->
     @@include('html/partials/footer.html')
 
