feat: add about section

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,41 @@
 
     <!-- main -->
     <main>
+        <!-- banner section-->
         <section class="section section--banner">
             <div class="container">
                 <div class="section__inner">
                     <div class="banner">
                         <p class="banner__text">Watch your <span>favorite</span> animal online</p>
                         <button type="button" class="btn btn--fill">Watch online</button>
+                    </div>
+                </div>
+            </div>
+        </section> <!-- end of banner section-->
+
+        <!-- about section -->
+        <section class="section section--about">
+            <div class="container">
+                <div class="section__inner">
+                    <div class="about">
+                        <img src="img/about/about.jpg" class="about__image" alt="Old asian man in the bamboo cap">
+                        <div class="about__text-block">
+                            <h2 class="section__title about__title">The Backstage of the Wilderness World.</h2>
+
+                            <p class="section__text about__text">The site was founded on the basis of a volunteer
+                                movement to
+                                protect and care for animals.</p>
+
+                            <p class="section__subtitle about__subtitle">How it works</p>
+
+                            <p class="section__text about__text">The main goal is to help the animals, as well as the
+                                nature
+                                reserves and zoos where they are kept. We are currently working on video projects
+                                targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida
+                                and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.
+                            </p>
+
+                        </div>
                     </div>
                 </div>
             </div>
