feat: add animals cards section

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,98 @@
                 </div>
             </div>
         </section>
+        <!--end of about section-->
+
+        <!-- animals cards block -->
+        <div class="animals">
+            <img src="img/animals/palm.png" alt="palm" class="animals__decor animals__decor--1">
+            <img src="img/animals/strelitzia.png" alt="strelitzia" class="animals__decor animals__decor--2">
+            <div class="container">
+                <div class="animals__inner">
+
+                    <div class="animals__slider">
+                        <article class="card">
+                            <img src="img/animals/pandas.jpg" class="card__image" alt="pandas">
+                            <div class="card__info">
+                                <div class="card__text">
+                                    <p class="card__title">Giant pandas</p>
+                                    <p class="card__subtitle">Native to Southwest China</p>
+                                </div>
+                                <img src="img/icons/banana-bamboo_icon.png" class="card__icon"
+                                    alt=" crossed banana and bamboo icon shows the animal is herbivore">
+                            </div>
+                        </article>
+                        <article class="card">
+                            <img src="img/animals/eagles.jpg" class="card__image" alt="eagles">
+                            <div class="card__info">
+                                <div class="card__text">
+                                    <p class="card__title">Eagles</p>
+                                    <p class="card__subtitle">Native to South America</p>
+                                </div>
+                                <img src="img/icons/meet-fish_icon.png" class="card__icon"
+                                    alt=" crossed banana and bamboo icon shows the animal is carnivore">
+                            </div>
+                        </article>
+                        <article class="card">
+                            <img src="img/animals/gorillas.jpg" class="card__image" alt="gorillas">
+                            <div class="card__info">
+                                <div class="card__text">
+                                    <p class="card__title">Gorillas</p>
+                                    <p class="card__subtitle">Native to Congo</p>
+                                </div>
+                                <img src="img/icons/banana-bamboo_icon.png" class="card__icon"
+                                    alt=" crossed banana and bamboo icon shows the animal is herbivore">
+                            </div>
+                        </article>
+                        <article class="card">
+                            <img src="img/animals/sloths.jpg" class="card__image" alt="Two-toed sloths">
+                            <div class="card__info">
+                                <div class="card__text">
+                                    <p class="card__title">Two-toed Sloth</p>
+                                    <p class="card__subtitle">Mesoamerica, South America</p>
+                                </div>
+                                <img src="img/icons/banana-bamboo_icon.png" class="card__icon"
+                                    alt=" crossed banana and bamboo icon shows the animal is herbivore">
+                            </div>
+                        </article>
+                        <article class="card">
+                            <img src="img/animals/cheetahs.jpg" class="card__image" alt="cheetahs">
+                            <div class="card__info">
+                                <div class="card__text">
+                                    <p class="card__title">Cheetahs</p>
+                                    <p class="card__subtitle">Native to Africa</p>
+                                </div>
+                                <img src="img/icons/meet-fish_icon.png" class="card__icon"
+                                    alt=" crossed banana and bamboo icon shows the animal is carnivore">
+                            </div>
+                        </article>
+                        <article class="card">
+                            <img src="img/animals/penguins.jpg" class="card__image" alt="penguin">
+                            <div class="card__info">
+                                <div class="card__text">
+                                    <p class="card__title">Penguins</p>
+                                    <p class="card__subtitle">Native to Antarctica</p>
+                                </div>
+                                <img src="img/icons/meet-fish_icon.png" class="card__icon"
+                                    alt=" crossed banana and bamboo icon shows the animal is carnivore">
+                            </div>
+                        </article>
+
+                        <button class="btn animals__slider-arrow animals__slider-arrow--previous">
+                            <img src="img/icons/arrow.svg" alt="previous slide">
+                        </button>
+
+                        <button class="btn animals__slider-arrow animals__slider-arrow--next">
+                            <img src="img/icons/arrow.svg" alt="next slide">
+                        </button>
+                    </div>
+
+
+                    <button class="btn btn--fill" type="button">Choose your favorite</button>
+                </div>
+            </div>
+        </div>
+        <!--end of animals block-->
     </main>
     <!-- footer include -->
     @@include('html/partials/footer.html')
