feat: add section feed

--- a/src/index.html
+++ b/src/index.html
@@ -143,6 +143,68 @@
             </div>
         </div>
         <!--end of animals block-->
+
+
+        <!-- section feed -->
+        <section class="section section--feed">
+            <div class="container">
+                <div class="section__inner">
+                    <h2 class="section__title">Pick and feed a friend</h2>
+                    <div class="section__content">
+                        <div class="feed">
+                            <div class="feed__text">
+                                <p class="section__subtitle">We know the animals bring you joy, and in these
+                                    extraordinary
+                                    times, we’re glad.</p>
+
+                                <p class="section__text strong">During a time when the COVID-19 epidemic is touching all
+                                    of
+                                    our lives, we’re proud and glad that people around the world find joy in PetStory.
+                                </p>
+
+                                <p class="section__text">
+                                    Even though the zoo has reopened, we need you now more than ever to help us deal
+                                    with
+                                    these problems. Please consider a gift to our Emergency Support Fund .
+                                </p>
+                            </div>
+
+                            <div class="feed__illustration">
+                                <h3 class="feed__illustration-title">How it works</h3>
+
+                                <div class="feed__illustration-content">
+                                    <figure class="feed__figure">
+                                        <div class="feed__figure-image">
+                                            <img src="img/feed/pay.png" class="feed__figure-icon"
+                                                alt="Pay with card icon">
+                                        </div>
+                                        <figcaption class="feed__figcaption">Pay with card</figcaption>
+                                    </figure>
+                                    <figure class="feed__figure">
+                                        <div class="feed__figure-image">
+                                            <img src="img/feed/zoo.png" class="feed__figure-icon"
+                                                alt="Payment goes to the zoo icon">
+                                        </div>
+                                        <figcaption class="feed__figcaption">Payment goes to the zoo</figcaption>
+                                    </figure>
+                                    <figure class="feed__figure">
+                                        <div class="feed__figure-image">
+                                            <img src="img/feed/monkey.png" class="feed__figure-icon"
+                                                alt="monkey with bananas icon">
+                                        </div>
+                                        <figcaption class="feed__figcaption">Your favourite animal gets delicious dish
+                                        </figcaption>
+                                    </figure>
+                                </div>
+
+                            </div>
+
+                            <button type="button" class="btn btn--fill">Feed a friend now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section> <!-- section feed -->
     </main>
     <!-- footer include -->
     @@include('html/partials/footer.html')
