feat: add testimonials section

--- a/src/index.html
+++ b/src/index.html
@@ -205,6 +205,143 @@
                 </div>
             </div>
         </section> <!-- section feed -->
+
+        <!-- section testimonials -->
+        <section class="section section--testimonials">
+            <div class="container">
+                <div class="section__inner">
+                    <h3 class="section__title">Testimonials</h3>
+                    <div class="section__content">
+                        <div class="testimonials__slider">
+                            <article class="testimonials__card">
+                                <div class="testimonials__info">
+                                    <img src="img/testimonials/1.png" class="testimonials__image" alt="reviewer image">
+
+                                    <div class="testimonials__info-data">
+                                        <p class="testimonials__name">Michael John</p>
+
+                                        <p class="testimonials__additional-info">
+                                            <span class="testimonials__location">Local Austria</span>
+                                            &middot;
+                                            <span class="testimonials__date">Today</span>
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="testimonials__text">
+                                    <p>The best online zoo I’ve met. My son delighted very much
+                                        ljves to watch gouillas. Online zoo is one jf the ways to instill a love for
+                                        animals.The best online zoo I’ve met. My son delighted very much ljves to watch
+                                        gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                        The best online zoo I’ve met. My son delighted very much ljves to watch
+                                        gouillas.
+                                        Online zoo is one jf the ways to instill a love for animals.The best online zoo
+                                        I’ve
+                                        met. My son delighted very much ljves to watch gouillas. Online zoo is one jf
+                                        the
+                                        ways to instill a love for animals.
+                                    </p>
+                                </div>
+                            </article>
+                            <article class="testimonials__card">
+                                <div class="testimonials__info">
+                                    <img src="img/testimonials/2.jpg" class="testimonials__image" alt="reviewer image">
+
+                                    <div class="testimonials__info-data">
+                                        <p class="testimonials__name">Oskar Samborsky</p>
+
+                                        <p class="testimonials__additional-info">
+                                            <span class="testimonials__location">Local Austria</span>
+                                            &middot;
+                                            <span class="testimonials__date">Yestersday</span>
+                                        </p>
+                                    </div>
+                                </div>
+                                <div class="testimonials__text">
+                                    <p>Online zoo is one jf the ways to instill a love for
+                                        animals.The best online zoo I’ve met. My son delighted very much ljves to watch
+                                        gouillas. Online zoo is one jf the ways to instill a love for animals.The best
+                                        online zoo I’ve met. My son delighted very much ljves to watch gouillas.
+                                        The best online zoo I’ve met. My son delighted very much ljves to watch
+                                        gouillas.
+                                        Online zoo is one jf the ways to instill a love for animals.The best online zoo
+                                        I’ve
+                                        met. My son delighted very much ljves to watch gouillas. Online zoo is one jf
+                                        the
+                                        ways to instill a love for animals.
+
+                                        The best online zoo I’ve met. My son delighted very much ljves to watch
+                                        gouillas.
+                                        Online zoo is one jf the ways to instill a love for animals.The best online zoo
+                                        I’ve
+                                        met. My son delighted very much ljves to watch gouillas. Online zoo is one jf
+                                        the
+                                        ways to instill a love for animals.
+                                    </p>
+                                </div>
+                            </article>
+                            <article class="testimonials__card">
+                                <div class="testimonials__info">
+                                    <img src="img/testimonials/3.jpg" class="testimonials__image" alt="reviewer image">
+
+                                    <div class="testimonials__info-data">
+                                        <p class="testimonials__name">Fredericka Michelin</p>
+
+                                        <p class="testimonials__additional-info">
+                                            <span class="testimonials__location">Local Austria</span>
+                                            &middot;
+                                            <span class="testimonials__date">Yesterday</span>
+                                        </p>
+                                    </div>
+                                </div>
+                                <p class="testimonials__text">The best online zoo I’ve met. My son delighted very much
+                                    ljves to watch gouillas. Online zoo is one jf the ways to instill a love for
+                                    animals.The best online zoo I’ve met. My son delighted very much ljves to watch
+                                    gouillas. Online zoo is one jf the ways to instill a love for animals.
+                                    The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
+                                    Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve
+                                    met.
+                                    The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
+                                    Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve
+                                    met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the
+                                    ways to instill a love for animals.
+
+                                </p>
+                            </article>
+                            <article class="testimonials__card">
+                                <div class="testimonials__info">
+                                    <img src="img/testimonials/4.jpg" class="testimonials__image" alt="reviewer image">
+
+                                    <div class="testimonials__info-data">
+                                        <p class="testimonials__name">Mila Riksha</p>
+
+                                        <p class="testimonials__additional-info">
+                                            <span class="testimonials__location">Local Austria</span>
+                                            &middot;
+                                            <span class="testimonials__date">Yesterday</span>
+                                        </p>
+                                    </div>
+                                </div>
+                                <p class="testimonials__text">
+                                    My son delighted very much ljves to watch gouillas. Online zoo is one jf the ways to
+                                    instill a love for animals.The best online zoo I’ve met. My son delighted very much
+                                    ljves to watch gouillas. Online zoo is one jf the ways to instill a love for
+                                    animals.The best online zoo I’ve met. My son delighted very much ljves to watch
+                                    gouillas. Online zoo is one jf the ways to instill a love for animals.The best
+                                    online zoo I’ve met. My son delighted very much ljves to watch gouillas.
+                                    The best online zoo I’ve met. My son delighted very much ljves to watch gouillas.
+                                    Online zoo is one jf the ways to instill a love for animals.The best online zoo I’ve
+                                    met. My son delighted very much ljves to watch gouillas. Online zoo is one jf the
+                                    ways to instill a love for animals.
+
+                                </p>
+                            </article>
+                        </div>
+                        <button type="button" class="btn btn--fill btn--round">Leave feedback</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--end of section testimonials-->
     </main>
     <!-- footer include -->
     @@include('html/partials/footer.html')
