fix: add link in feed section text

--- a/src/index.html
+++ b/src/index.html
@@ -165,7 +165,8 @@
                                 <p class="section__text">
                                     Even though the zoo has reopened, we need you now more than ever to help us deal
                                     with
-                                    these problems. Please consider a gift to our Emergency Support Fund .
+                                    these problems. Please consider a gift to our <a href="#">Emergency Support
+                                        Fund</a>.
                                 </p>
                             </div>
 
