feat: add animations for animals cards

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,9 @@
 
                     <div class="animals__slider">
                         <article class="card">
-                            <img src="img/animals/pandas.jpg" class="card__image" alt="pandas">
+                            <div class="card__image">
+                                <img src="img/animals/pandas.jpg" alt="pandas">
+                            </div>
                             <div class="card__info">
                                 <div class="card__text">
                                     <p class="card__title">Giant pandas</p>
@@ -73,7 +75,9 @@
                             </div>
                         </article>
                         <article class="card">
-                            <img src="img/animals/eagles.jpg" class="card__image" alt="eagles">
+                            <div class="card__image">
+                                <img src="img/animals/eagles.jpg" class="card__image" alt="eagles">
+                            </div>
                             <div class="card__info">
                                 <div class="card__text">
                                     <p class="card__title">Eagles</p>
@@ -84,7 +88,9 @@
                             </div>
                         </article>
                         <article class="card">
-                            <img src="img/animals/gorillas.jpg" class="card__image" alt="gorillas">
+                            <div class="card__image">
+                                <img src="img/animals/gorillas.jpg" class="card__image" alt="gorillas">
+                            </div>
                             <div class="card__info">
                                 <div class="card__text">
                                     <p class="card__title">Gorillas</p>
@@ -95,7 +101,9 @@
                             </div>
                         </article>
                         <article class="card">
-                            <img src="img/animals/sloths.jpg" class="card__image" alt="Two-toed sloths">
+                            <div class="card__image">
+                                <img src="img/animals/sloths.jpg" class="card__image" alt="Two-toed sloths">
+                            </div>
                             <div class="card__info">
                                 <div class="card__text">
                                     <p class="card__title">Two-toed Sloth</p>
@@ -106,7 +114,9 @@
                             </div>
                         </article>
                         <article class="card">
-                            <img src="img/animals/cheetahs.jpg" class="card__image" alt="cheetahs">
+                            <div class="card__image">
+                                <img src="img/animals/cheetahs.jpg" class="card__image" alt="cheetahs">
+                            </div>
                             <div class="card__info">
                                 <div class="card__text">
                                     <p class="card__title">Cheetahs</p>
@@ -117,7 +127,9 @@
                             </div>
                         </article>
                         <article class="card">
-                            <img src="img/animals/penguins.jpg" class="card__image" alt="penguin">
+                            <div class="card__image">
+                                <img src="img/animals/penguins.jpg" class="card__image" alt="penguin">
+                            </div>
                             <div class="card__info">
                                 <div class="card__text">
                                     <p class="card__title">Penguins</p>
