feat: add donate page

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <!-- head include -->
 @@include('html/partials/head.html', {
-"title": "Главная"
+"title": "PetStory"
 })
 
 <body>
@@ -177,7 +177,8 @@
                                 <p class="section__text">
                                     Even though the zoo has reopened, we need you now more than ever to help us deal
                                     with
-                                    these problems. Please consider a gift to our <a href="#">Emergency Support
+                                    these problems. Please consider a gift to our <a href="donate.html">Emergency
+                                        Support
                                         Fund</a>.
                                 </p>
                             </div>
