fix: change btn hover effect, change links

--- a/src/donate.html
+++ b/src/donate.html
@@ -13,7 +13,7 @@
 
     <main>
         <div class="donate-banner">
-
+            <h1 class="seotag">PetStory Online</h1>
         </div>
 
         <section class="section section--feed section--donate">
