--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
 
     <!-- main -->
     <main>
+        <h1 class="seotag">PetStory Online</h1>
         <!-- banner section-->
         <section class="section section--banner">
             <div class="container">
@@ -213,7 +214,7 @@
 
                             </div>
 
-                            <button type="button" class="btn btn--fill">Feed a friend now</button>
+                            <a href="donate.html" class="btn btn--fill">Feed a friend now</a>
                         </div>
                     </div>
                 </div>
