--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,9 @@
 
                     <div class="animals__slider">
                         <article class="card">
+                            <div class="card__inner">
+
+                            </div>
                             <div class="card__image">
                                 <img src="img/animals/pandas.jpg" alt="pandas">
                             </div>
