fix: add headers for articles, sections

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
             <div class="container">
                 <div class="section__inner">
                     <div class="banner">
-                        <p class="banner__text">Watch your <span>favorite</span> animal online</p>
+                        <h2 class="banner__text">Watch your <span>favorite</span> animal online</h2>
                         <button type="button" class="btn btn--fill">Watch online</button>
                     </div>
                 </div>
@@ -71,7 +71,7 @@
                             </div>
                             <div class="card__info">
                                 <div class="card__text">
-                                    <p class="card__title">Giant pandas</p>
+                                    <h4 class="card__title">Giant pandas</h4>
                                     <p class="card__subtitle">Native to Southwest China</p>
                                 </div>
                                 <img src="img/icons/banana-bamboo_icon.png" class="card__icon"
@@ -84,7 +84,7 @@
                             </div>
                             <div class="card__info">
                                 <div class="card__text">
-                                    <p class="card__title">Eagles</p>
+                                    <h4 class="card__title">Eagles</h4>
                                     <p class="card__subtitle">Native to South America</p>
                                 </div>
                                 <img src="img/icons/meet-fish_icon.png" class="card__icon"
@@ -97,7 +97,7 @@
                             </div>
                             <div class="card__info">
                                 <div class="card__text">
-                                    <p class="card__title">Gorillas</p>
+                                    <h4 class="card__title">Gorillas</h4>
                                     <p class="card__subtitle">Native to Congo</p>
                                 </div>
                                 <img src="img/icons/banana-bamboo_icon.png" class="card__icon"
@@ -110,7 +110,7 @@
                             </div>
                             <div class="card__info">
                                 <div class="card__text">
-                                    <p class="card__title">Two-toed Sloth</p>
+                                    <h4 class="card__title">Two-toed Sloth</h4>
                                     <p class="card__subtitle">Mesoamerica, South America</p>
                                 </div>
                                 <img src="img/icons/banana-bamboo_icon.png" class="card__icon"
@@ -123,7 +123,7 @@
                             </div>
                             <div class="card__info">
                                 <div class="card__text">
-                                    <p class="card__title">Cheetahs</p>
+                                    <h4 class="card__title">Cheetahs</h4>
                                     <p class="card__subtitle">Native to Africa</p>
                                 </div>
                                 <img src="img/icons/meet-fish_icon.png" class="card__icon"
@@ -136,7 +136,7 @@
                             </div>
                             <div class="card__info">
                                 <div class="card__text">
-                                    <p class="card__title">Penguins</p>
+                                    <h4 class="card__title">Penguins</h4>
                                     <p class="card__subtitle">Native to Antarctica</p>
                                 </div>
                                 <img src="img/icons/meet-fish_icon.png" class="card__icon"
@@ -238,7 +238,7 @@
                                 <div class="swiper-wrapper">
                                     <!-- Slides -->
                                     <div class="swiper-slide">
-                                        <article class="testimonials__card">
+                                        <div class="testimonials__card">
                                             <div class="testimonials__info">
                                                 <img src="img/testimonials/1.png" class="testimonials__image"
                                                     alt="reviewer image">
@@ -276,10 +276,10 @@
                                                     ways to instill a love for animals.
                                                 </p>
                                             </div>
-                                        </article>
+                                        </div>
                                     </div>
                                     <div class="swiper-slide">
-                                        <article class="testimonials__card">
+                                        <div class="testimonials__card">
                                             <div class="testimonials__info">
                                                 <img src="img/testimonials/2.jpg" class="testimonials__image"
                                                     alt="reviewer image">
@@ -328,10 +328,10 @@
                                                     ways to instill a love for animals.
                                                 </p>
                                             </div>
-                                        </article>
+                                        </div>
                                     </div>
                                     <div class="swiper-slide">
-                                        <article class="testimonials__card">
+                                        <div class="testimonials__card">
                                             <div class="testimonials__info">
                                                 <img src="img/testimonials/3.jpg" class="testimonials__image"
                                                     alt="reviewer image">
@@ -371,11 +371,11 @@
                                                 ways to instill a love for animals.
 
                                             </p>
-                                        </article>
+                                        </div>
                                     </div>
 
                                     <div class="swiper-slide">
-                                        <article class="testimonials__card">
+                                        <div class="testimonials__card">
                                             <div class="testimonials__info">
                                                 <img src="img/testimonials/4.jpg" class="testimonials__image"
                                                     alt="reviewer image">
@@ -417,7 +417,7 @@
                                                 ways to instill a love for animals.
 
                                             </p>
-                                        </article>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
