--- a/src/index.html
+++ b/src/index.html
@@ -178,10 +178,10 @@
                                     our lives, we’re proud and glad that people around the world find joy in PetStory.
                                 </p>
 
-                                <p class="section__text">
+                                <p class="section__text last">
                                     Even though the zoo has reopened, we need you now more than ever to help us deal
                                     with
-                                    these problems. Please consider a gift to our <a href="donate.html">Emergency
+                                    these problems. Please consider <br /> a gift to our <a href="donate.html">Emergency
                                         Support
                                         Fund</a>.
                                 </p>
