--- a/src/index.html
+++ b/src/index.html
@@ -199,7 +199,7 @@
                     </div>
 
 
-                    <button class="btn btn--fill" type="button">Choose your favorite</button>
+                    <button class="btn btn--fill animals__btn" type="button">Choose your favorite</button>
                 </div>
             </div>
         </div>
